Update index.html Link auf Github eingefügt.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <h2>Projekte</h2>
         <h3>Neuronales Netzwerk in Cuda C</h3>
         <p>Ich habe mit meinem Bruder zusammen den klassischen Backtrack-Alogrithmus in Cuda C implementiert. Dabei ging es in erster Linie darum zu lernen, wie moderen Graphikkarten genutzt werden, um diesen Alogrithmus zu beschleunigen.</p>
-        <p>Den Quellcode habe ich auf Github hochgeladen.</p>
+        <p>Den <a href="https://github.com/Gerhit/ff_network">Quellcode</a> habe ich auf Github hochgeladen.</p>
         <h3>Lineare Algebra für Babys</h3>
         <p>Inspirit durch das tolle Buch Quantenphysik für Babys von Chris Ferrie habe ich für meine Kinder eine eigene Version geschrieben: <a href="pdf/lafuersbaby.pdf"> Lineare Alegbra für Babys</a></p>
 <p>Man sollte es mit Humor nehmen. Es geht nicht darum, dass die Kinder hier wirklich etwas lernen :-).</p>
